# delight-helpers

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
crates/delight/: Cargo.toml  README.md  build.rs
crates/delight-build/: Cargo.toml  README.md
crates/delight-build/src/: lib.rs
crates/delight-sys/: Cargo.toml  README.md  build.rs
crates/delight-sys/include/: delight.h  wrapper.h
crates/delight-sys/src/: lib.rs
crates/delight-sys/src/dynamic/: mod.rs
crates/delight-sys/src/linked/: mod.rs
crates/delight/src/: lib.rs
src/: cli.yml  frame_sequence_parser.rs  main.rs  rdl.rs  rdl_cli.rs  render.rs  watch.rs
