[package]
name = "delight-helpers"
version = "0.1.7"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "ray-tracing", "scene-description"]
categories = ["command-line-utilities", "graphics", "multimedia::images", "rendering"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
description = "Command line utilities/helpers for the 3Delight renderer."
exclude = [".github/**/*", "crates/**/*"]
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/delight-helpers/"
repository = "https://github.com/virtualritz/delight-helpers/"

[[bin]]
name = "rdl"
path = "src/rdl.rs"

#[[bin]]
#name = "tdl"
#path = "src/tdl.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2", features = ["derive", "color", "suggestions", "unicode", "wrap_help"] }
clap_complete = "4.2"
fern = { version = "0.6.2", features = ["colored"] }
frame-sequence = "0.1"
human-panic = "1.1"
log = { version = "0.4.17", features = ["std"] }
notify = "5.1.0"
nsi = { version = "0.7"} #, path = "../nsi-old" }

[build-dependencies]
bindgen = "0.65.1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3-prerelease04"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "nightly"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
