[package]
name = "delight-helpers"
version = "0.1.8"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "ray-tracing"]
categories = ["command-line-utilities", "graphics", "multimedia::images", "rendering"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
description = "Command line utilities/helpers for the 3Delight renderer."
exclude = [".github/**/*", "crates/**/*", "cpp/**/*"]
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/delight-helpers/"
repository = "https://github.com/virtualritz/delight-helpers/"

[workspace]
members = [
    "crates/delight",
    "crates/delight-sys"
]

[[bin]]
name = "rdl"
path = "src/rdl.rs"
#[[bin]]
#name = "tdl"
#path = "src/tdl.rs"

[dependencies]
built = "0.7.1"
anyhow = "1"
clap = { version = "4.4", features = ["derive", "color", "suggestions", "unicode", "wrap_help"] }
clap_complete = "4.4"
clap_complete_fig = "4.4"
clap_complete_nushell = "4.4"
delight = { version = "*", path = "crates/delight" }
fern = { version = "0.6", features = ["colored"] }
frame-sequence = "0.1"
glibc_version = { version = "0.1.3", path = "../glibc-version-rs" }
human-panic = "1.2"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
notify = "6.1"
nsi = "0.8"

[target.'cfg(windows)'.dependencies]
rlimit = "0.10"

[build-dependencies]
built = "0.7.1"
glibc_version = { version = "0.1.3", path = "../glibc-version-rs" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3-prerelease04"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "nightly"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
