[package]
name = "delight-helpers"
version = "0.1.9"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "ray-tracing"]
categories = ["command-line-utilities", "graphics", "multimedia::images", "rendering"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
description = "Command line utilities/helpers for the 3Delight renderer."
exclude = [".github/**/*", "crates/**/*", "cpp/**/*"]
readme = "README.md"
homepage = "https://www.3delight.com/"
documentation = "https://docs.rs/delight-helpers/"
repository = "https://github.com/virtualritz/delight-helpers/"

[workspace]
members = [
    "crates/delight",
    "crates/delight-build",
    "crates/delight-sys"
]

[[bin]]
name = "rdl"
path = "src/rdl.rs"

#[[bin]]
#name = "tdl"
#path = "src/tdl.rs"

[features]
default = []
fig = ["clap_complete_fig"]
nushell = ["clap_complete_nushell"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "color", "suggestions", "unicode", "wrap_help"] }
clap_complete = "4"
clap_complete_fig = { version = "4", optional = true }
clap_complete_nushell = { version = "4", optional = true }
delight = "0.1"
fern = { version = "0.6", features = ["colored"] }
frame-sequence = "0.1"
glibc_version = "0.1"
human-panic = "2"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
notify = "6.1"
nsi = { path = "../nsi-old" } #"0.8"

[target.'cfg(windows)'.dependencies]
rlimit = "0.10"

[build-dependencies]
built = "0.7.1"
glibc_version = "0.1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

# Config for 'cargo dist'
[workspace.metadata.dist]
cargo-dist-version = "0.0.3-prerelease.8"
rust-toolchain-version = "nightly"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
