[package]
name = "delight-sys"
version = "0.1.0"
edition = "2021"

[features]
default = ["dlopen2"]
# Specify this to link agains lib3delight
link_lib3delight = []
# Manually initialize API
manual_init = []

[dependencies]
dlopen2 = { version = "0.6", optional = true }
lazy_static = "1.4"

[build-dependencies]
bindgen = "0.69"
